<resources>
    <string name="app_name">Kilowatt Kapitány</string>
    <string name="action_settings">Beállítások</string>
    
    <!-- Navigáció -->
    <string name="first_fragment_label">Első Képernyő</string>
    <string name="second_fragment_label">Második Képernyő</string>
    
    <!-- Bejelentkezés és regisztráció -->
    <string name="auth_title">Kilowatt Kapitány</string>
    <string name="auth_subtitle">Online áramóra leolvasás és lejelentés</string>
    <string name="login">Bejelentkezés</string>
    <string name="register">Regisztráció</string>
    <string name="email">Email cím</string>
    <string name="password">Jelszó</string>
    <string name="password_confirm">Jelszó megerősítése</string>
    <string name="forgot_password">Elfelejtett jelszó?</string>
    <string name="name">Teljes név</string>
    <string name="back_to_login">Vissza a bejelentkezéshez</string>
    
    <!-- Főoldal és leolvasás -->
    <string name="home_title">Áramóra leolvasás</string>
    <string name="meter_reading">Óraállás (kWh)</string>
    <string name="submit_reading">Leolvasás rögzítése</string>
    <string name="reading_history">Korábbi leolvasások</string>
    <string name="profile">Profil</string>
    <string name="logout">Kijelentkezés</string>
    
    <!-- Profil képernyő -->
    <string name="profile_title">Profil adatok</string>
    <string name="meter_id">Mérőóra azonosító</string>
    <string name="address">Lakcím</string>
    <string name="save">Mentés</string>
    
    <!-- Leolvasástörténet -->
    <string name="history_title">Korábbi leolvasások</string>
    <string name="no_readings">Még nincs rögzített óraállás</string>
    <string name="date">Dátum</string>
    <string name="reading_value">Óraállás</string>
    
    <!-- Statisztikák -->
    <string name="statistics_title">Statisztikák</string>
    <string name="calculate_consumption">Fogyasztás kiszámítása</string>
    <string name="avg_consumption">Átlagos fogyasztás: %.2f kWh/nap</string>
    <string name="avg_consumption_hint">Átlagos fogyasztás megjelenítéséhez kattints a gombra</string>
    <string name="min_two_readings_needed">Legalább két mérőállás szükséges a fogyasztás számításához</string>
    
    <!-- Beállítások -->
    <string name="settings">Beállítások</string>
    <string name="notification_settings">Értesítési beállítások</string>
    <string name="enable_notifications">Értesítések engedélyezése</string>
    <string name="notification_frequency">Értesítési gyakoriság: %d nap</string>
</resources>